[package]
name = "backup-utility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
serde = "1.0.144"
serde_derive = "1.0.144"
toml = "0.5.9"
wax = "0.5.0"
colored = "2.0.0"
byte-unit = "4.0.14"
